--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on: [ push, pull_request ]
 
 env:
   CFLAGS: "-Werror -Wall -Wextra -Wno-error=sign-compare -Wno-error=unused-parameter -Wno-error=missing-field-initializers"
-  UBUNTU_PACKAGES: libgudev-1.0-dev libxml++2.6-dev valgrind tree
+  UBUNTU_PACKAGES: libgudev-1.0-dev libxml++2.6-dev valgrind tree python3-pip python3-setuptools libevdev2
 
 jobs:
   ###
@@ -77,6 +77,8 @@ jobs:
         run: python -m pip install --upgrade pip meson ninja
       - name: Install libwacom dependencies
         run: sudo apt-get install -yq --no-install-suggests --no-install-recommends $UBUNTU_PACKAGES
+      - name: install pip dependencies
+        run: python -m pip install --upgrade libevdev pyudev pytest
       # for the non-valgrind case, we pass the meson options through and run
       # meson test
       - name: meson test ${{matrix.meson_options}}
@@ -123,11 +125,12 @@ jobs:
       # libwacom dependencies
       - name: Install dependencies
         run: sudo apt-get install -yq --no-install-suggests --no-install-recommends $UBUNTU_PACKAGES
-      - name: install python (if needed)
+      - name: install python
         uses: actions/setup-python@v1
-        if: matrix.buildtool == 'meson'
         with:
           python-version: '3.8'
+      - name: install pip dependencies
+        run: python -m pip install --upgrade libevdev pyudev pytest
       - name: install meson from pip (if needed)
         run: python -m pip install --upgrade pip meson ninja
         if: matrix.buildtool == 'meson'
