data: add a pytest for data files correctness
Currently the only check performed is the check for lowercase hex in the
DeviceMatch. While this could be done in the database parsing directly it's
harder to do there (an uppercase hex value is still a correct scanf string).

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -13,7 +13,7 @@ EXTRA_DIST = \
 
 SUBDIRS = layouts
 
-noinst_SCRIPTS = check-files-in-git.sh check-svg-exists.sh
+noinst_SCRIPTS = check-files-in-git.sh check-svg-exists.sh test_data_files.py
 EXTRA_DIST += $(noinst_SCRIPTS)
 
 AM_TESTS_ENVIRONMENT=top_srcdir="$(abs_top_srcdir)"; export top_srcdir;
