--- a/meson.build
+++ b/meson.build
@@ -107,6 +107,7 @@ install_subdir('data',
 	       exclude_files: ['wacom.example',
 			       'check-files-in-git.sh',
 			       'check-svg-exists.sh',
+			       'test-data_files.py',
 			       'Makefile.am',
 			       'Makefile.in',
 			       'layouts/Makefile.am',
